some typos in kap 1 3 6 7 8

--- a/kap6.tex
+++ b/kap6.tex
@@ -52,7 +52,7 @@
 
 \section{Der Körper der komplexen Zahlen}
 
-	Da wir nun wissen (oder halt auch nicht), weshalb wir die komplexen Zahlen benötigen, gilt es nun die verschiedenen Verknüpfungen, mit welchen wir zwei komplexe Zahlen verbinden, zu definieren. Wie alle anderen bekannten Mengen (außer $\N$), ist $\C$ teil eines \textbf{Körpers} welcher die zwei Verknüpfungen, denen wir allgemein die Namen \textbf{Addition} und \textbf{Multiplikation} geben. Das 3-Tupel (oder auch Tripel) ($\C$, +, *) ist somit der Körper, mit welchem wir arbeiten werden (jemals gefragt warum keine weiteren Verknüpfungen eingeführt wurden?). Jedoch muss auch erstmal bewiesen werden, dass dieses Tripel ein Körper ist:
+	Da wir nun wissen (oder halt auch nicht), weshalb wir die komplexen Zahlen benötigen, gilt es nun die verschiedenen Verknüpfungen, mit welchen wir zwei komplexe Zahlen verbinden, zu definieren. Wie alle anderen bekannten Mengen (außer $\N$), ist $\C$ teil eines \textbf{Körpers} welcher die zwei Verknüpfungen, denen wir allgemein die Namen \textbf{Addition} und \textbf{Multiplikation} geben. Das 3-Tupel (oder auch Tripel) ($\C$, +, *) ist somit der Körper, mit welchem wir arbeiten werden (jemals gefragt warum keine weiteren Verknüpfungen eingeführt wurden?). Jedoch muss auch erst mal bewiesen werden, dass dieses Tripel ein Körper ist:
 
 	\begin{Beweis}
 		\underline{\textbf{Die Addition}}:
@@ -170,7 +170,7 @@
 		Um einen Ansatz für eine Integration zu finden, bietet sich an zu beobachten, wie sich komplexe Zahlen auf der \textbf{reellen Zahlengerade} (welche eine Veranschaulichung des euklidischen Vektorraums $\R^1$ ist) verhalten.
 		\\
 		\begin{Definition}
-			Als \textbf{Zeiger} wird ein visuelles Hilfsmittel definiert, welches in der Gauß'schen Zahlenebene das Analoge zu dem Pfeil eines Ortsvektors eines Vektorraumes ist.
+			Als \textbf{Zeiger} wird ein visuelles Hilfsmittel definiert, welches in der Gauß'schen Zahlenebene das Analoge zu dem Pfeil eines Ortsvektors eines Vektorraums ist.
 		\end{Definition}
 
 		\begin{center}
@@ -261,11 +261,11 @@
 		\end{Definition}
 
 		\begin{Bemerkung}
-			Da jede komplexe Zahl eine Darstellung in der Gauß'schen Zahlenebene besitzt, lassen sie sich ebenfalls über einen Winkel und den Abstand zum Origo beschreiben.
+			Da jede komplexe Zahl eine Darstellung in der Gauß'schen Zahlenebene besitzt, lassen sie sich ebenfalls über einen Winkel und den Abstand zum Nullpunkt beschreiben.
 		\end{Bemerkung}
 
 		\begin{Definition}[Betrag einer komplexen Zahl]
-			Der \textbf{Betrag} einer komplexen Zahl ist gleichbedeutend mit dem \textbf{Abstand der Zahl zum Origo} oder der Länge des Zeigers. Pythagoras liefert uns eine Formel:
+			Der \textbf{Betrag} einer komplexen Zahl ist gleichbedeutend mit dem \textbf{Abstand der Zahl zum Nullpunkt} oder der Länge des Zeigers. Pythagoras liefert uns eine Formel:
 			$$|z| := \sqrt{x^2 + y^2} ; z = x + yi$$
 		\end{Definition}
 
@@ -324,8 +324,8 @@
 
 	\subsection{Rechenoperationen in der Gauß'schen Zahlenebene}
 
-		Die bereits angesprochenen basischen Rechenoperationen lassen sich in der Gauß'schen Zahlenebene als Transformation darstellen. Weshalb dies interessant ist, wird im Verlauf dieses Abschniits hoffentlich noch deutlich.
-		Die Addition ist die einfachste Transformation, weil sie equivalent zur Linearkombination bei Vektoren ist, da gilt: $$(z_1 + z_2) = ((x_1 + x_2) + (y_1 + y_2)i)$$ Bildlich bedeutet das:
+		Die bereits angesprochenen basischen Rechenoperationen lassen sich in der Gauß'schen Zahlenebene als Transformation darstellen. Weshalb dies interessant ist, wird im Verlauf dieses Abschnitts hoffentlich noch deutlich.
+		Die Addition ist die einfachste Transformation, weil sie äquivalent zur Linearkombination bei Vektoren ist, da gilt: $$(z_1 + z_2) = ((x_1 + x_2) + (y_1 + y_2)i)$$ Bildlich bedeutet das:
 
 		\begin{center}
 			\begin{tikzpicture}[>=triangle 45]
