--- a/kap8.tex
+++ b/kap8.tex
@@ -151,7 +151,7 @@ Hier die Liste der Primzahlen bis 100:
 \end{Definition}
 
 
-\begin{Theorem}[Unednlichkeit der Primzahlen]
+\begin{Theorem}[Unendlichkeit der Primzahlen]
 	Es gibt unendlich viele Primzahlen
 \end{Theorem}
 
