--- a/kap1.tex
+++ b/kap1.tex
@@ -70,7 +70,7 @@ Für manche Folgen sind beide Darstellungen möglich, wobei die explizite Darste
 \subsubsection{Web-Diagramme}
 
 
-Hier handelt es sich um ein graphisches Verfahren, das dazu dient, das Verhalten einer Folge, deren Darstellung rekursiv ist, zu untersuchen.  Es ermögicht die Beobachtung des Langzeitverhaltens (Konvergenz, Divergenz oder Oszillation) einer rekursiven Folge.\\\\
+Hier handelt es sich um ein graphisches Verfahren, das dazu dient, das Verhalten einer Folge, deren Darstellung rekursiv ist, zu untersuchen.  Es ermöglicht die Beobachtung des Langzeitverhaltens (Konvergenz, Divergenz oder Oszillation) einer rekursiven Folge.\\\\
 \begin{minipage}{0.5\textwidth}
 Dazu muss man der rekursiven Folgenvorschrift eine \textcolor{blue}{Funktion $f(a_{n-1})=a_{n}$} zuordnen, sodass - grob gesagt - " die Funktion das Gleiche mit x macht, dass die Folge macht, um von $a_{n}$ auf $a_{n+1}$ zu kommen". Man muss verstehen, dass es sich hierbei nicht um den Graphen der Folge handelt, die Werte der Folgenglieder sind nicht wie gewohnt abzulesen. Zusätzlich zeichnet man in ein kartesisches Koordinatensystem die \textcolor{blue}{Hauptdiagonale} ein (entspricht dem Graphen von $f(x)=x$).  Exemplarisch wird hier die Folge $a_{n+1}=2\sqrt{a_n}+2$ behandelt, dementsprechend ist die Hilfsfunktion hier $f$ mit $f(x)=2\sqrt{x} +2$.
 \end{minipage}
@@ -138,7 +138,7 @@ ytick={-2,-1,...,10},]
 \end{tikzpicture}
 \end{minipage}
 \begin{minipage}{0.5\textwidth}
-Dann trägt man den Wert des ersten Folgegliedes auf die Abzissenachse ein und verbindet ihn mit der entsprechenden Funktion anhand eines vertikalen Striches. Der Ordinatenwert, der so erhalten wird (Punkt \textcolor{blue}{A}), entspricht dem Wert von $a_1$. Um den Vorgang erneuern zu können, muss der gefundene Wert wieder auf die Abzissenachse, dazu benutzt man die Hauptdiagonale als \" Spiegel". Ein horizontaler Strich bis zur Hauptdiagonale (zum Punkt \textcolor{blue}{B})  und ein vertikaler bis zur Abzissenachse lösen das Problem. So ist der Wert von $a_1$ aud der Abzissenachse, dort wird er für den nächsten Schritt benötigt.
+Dann trägt man den Wert des ersten Folgegliedes auf die Abzissenachse ein und verbindet ihn mit der entsprechenden Funktion anhand eines vertikalen Striches. Der Ordinatenwert, der so erhalten wird (Punkt \textcolor{blue}{A}), entspricht dem Wert von $a_1$. Um den Vorgang erneuern zu können, muss der gefundene Wert wieder auf die Abzissenachse, dazu benutzt man die Hauptdiagonale als \" Spiegel". Ein horizontaler Strich bis zur Hauptdiagonale (zum Punkt \textcolor{blue}{B})  und ein vertikaler bis zur Abzissenachse lösen das Problem. So ist der Wert von $a_1$ aus der Abzissenachse, dort wird er für den nächsten Schritt benötigt.
 \end{minipage}
 \\\\\\
 Dasselbe muss mehrmals wiederholt werden, so wird jeweils das nächste Folgeglied auf die Abzissenachse abgebildet (\textcolor{red}{rote} Punkte). Daraus kann man dann eine \textcolor{blue}{Tendenz} erkennen\textcolor{blue}{, die die Entwicklung der Folgeglieder beschreibt}. Je nach dem, was für eine Tendenz zu erkennen ist, kann man verschiedene Schlüsse bezüglich der Entwicklung der Folge schließen. In diesem Falle wird deutlich, dass die Folge konvergiert, der Grenzwert ist die Schnittstelle zwischen der Hilfsfunktion und der Hauptdiagonalen, es fehlt nur noch diesen zu berechnen.
@@ -304,7 +304,7 @@ Die konvergierende Spirale, es gibt also einen Grenzwert, den man erneut mit der
 \end{minipage}
 
 \begin{Bemerkung}
-Dieses Verfahren kann ausschließlich bei rekusiven Folgen angewendet werden, bei denen keine zusätzliche Abhängigkeit von $n$ vorliegt (Beispiel: $a_{n}=3\cdot a_{n-1}+4n+3$) oder die Rekursivitätsebene den 1. Grad überschreitet, was bedeutet, dass $a_{n}$ nicht nur in Abhängigkeit von $a_{n-1}$ beschrieben wird, sondern von anderen Rekursivitätsebenen wie $a_{n-2}$ (Beispiel: die Fibonacci-Folge).\\
+Dieses Verfahren kann ausschließlich bei rekursiven Folgen angewendet werden, bei denen keine zusätzliche Abhängigkeit von $n$ vorliegt (Beispiel: $a_{n}=3\cdot a_{n-1}+4n+3$) oder die Rekursivitätsebene den 1. Grad überschreitet, was bedeutet, dass $a_{n}$ nicht nur in Abhängigkeit von $a_{n-1}$ beschrieben wird, sondern von anderen Rekursivitätsebenen wie $a_{n-2}$ (Beispiel: die Fibonacci-Folge).\\
 \end{Bemerkung}
 
 \begin{GTR-Tipp}
@@ -392,7 +392,7 @@ Jedes Folgeglied einer solchen Folge ist das geometrische Mittel seines Vorgäng
 		\textcolor{orange}{a_{n+1}\leq a_n}
 	\end{cases}$.
 	
-	Gelten dabei sagar \textbf{strikte} Ordnungsrelationen ($>$ oder $<$), dann ist $(a_n)$ \textbf{streng} monoton wachsend bzw. abnehmend.
+	Gelten dabei sogar \textbf{strikte} Ordnungsrelationen ($>$ oder $<$), dann ist $(a_n)$ \textbf{streng} monoton wachsend bzw. abnehmend.
 \end{Definition}
 
 \underline{Strategie:}
@@ -670,7 +670,7 @@ Besitzt die Folge überhaupt keinen Grenzwert, so heißt sie \textbf{unbestimmt 
 \end{Definition}
 
 \begin{Bemerkung}
-Man nennt einen Grenzwert $g=+\infty$ oder $g=-\infty$ einen \textbf{uneigentlichen Grenzwert}.
+Man nennt einen Grenzwert $g=+\infty$ oder $g=-\infty$ einen \textbf{uneigendlichen Grenzwert}.
 \end{Bemerkung}
 
 \begin{Beispiel}
