--- a/kap3.tex
+++ b/kap3.tex
@@ -28,7 +28,7 @@ Stetigkeit ist eine lokale Eigenschaft. Die Funktion $f$ heißt dann stetig, wen
 \begin{Bemerkung}
 	Stetige Funktionen haben sehr angenehme Eigenschaften, die intuitiv mit der ''Definition'' des Stiftes, welcher beim Zeichnen des Funktionsgraphen nicht angehoben wird, im Zusammenhang stehen.
 	
-	So sagt der \textbf{Zwischenwertsatz} aus, dass eine reelle, im Intervall $[a;b]$ stetige Funktion $f$ jeden Wert zwischen $f(a)$ und $f(b)$ ainnimmt.
+	So sagt der \textbf{Zwischenwertsatz} aus, dass eine reelle, im Intervall $[a;b]$ stetige Funktion $f$ jeden Wert zwischen $f(a)$ und $f(b)$ annimmt.
 
 	Haben $a$ und $b$ zudem verschiedene Vorzeichen, so verspricht der Zwischenwertsatz mindestens eine Nullstelle von $f$ in diesem abgeschlossenen Intervall. Dieser Sonderfall ist als \textbf{Nullstellensatz} von Bolzano bekannt.
 \end{Bemerkung}
@@ -40,14 +40,14 @@ Stetigkeit ist eine lokale Eigenschaft. Die Funktion $f$ heißt dann stetig, wen
 
 \subsubsection{Stetige Fortsetzungen}
 
-Beim Vereinfachen von gebrochenrationalen Funktionen ist Vorsicht geboten, denn eine hebbare Definitionslücke ''aufzuheben'' verändert den Definitionsbereich der Funktion. Die daraus resultierende Funktion wird \textbf{stetige Fortsetzung} genannt.
+Beim Vereinfachen von gebrochen rationalen Funktionen ist Vorsicht geboten, denn eine hebbare Definitionslücke ''aufzuheben'' verändert den Definitionsbereich der Funktion. Die daraus resultierende Funktion wird \textbf{stetige Fortsetzung} genannt.
 
 
 
 \section{Differenzierbarkeit}
 
 \begin{Definition}
-	Eine Funktion ist differenzierbar an der Stelle $x_{0} \in D$, wenn der beitseitige Grenzwert des Differenzenquotienten für $h\rightarrow 0$ existiert. Anschaulich soll Die Funktion links und rechts des $x_{0}$ die selbe Ableitung haben.
+	Eine Funktion ist differenzierbar an der Stelle $x_{0} \in D$, wenn der beidseitige Grenzwert des Differenzenquotienten für $h\rightarrow 0$ existiert. Anschaulich soll Die Funktion links und rechts des $x_{0}$ die selbe Ableitung haben.
 
 	$\lim\limits_{h \rightarrow 0^{+}} {\dfrac{f(x_{0}+h)-f(x_{0})}{h}} = \lim\limits_{h \rightarrow 0^{-}} {\dfrac{f(x_{0}+h)-f(x_{0})}{h}} =f'(x_{0})$
 
@@ -195,7 +195,7 @@ Die Funktion nennt man \textbf{ungerade}.
 \subsection{Grenzwerte}
 
 \begin{Definition}
-	Das Symbol $\lim\limits_{x \rightarrow x_{0}}f(x)$ mit $x_{0} \in \overline{\R}$ ($\pm \infty$ eingeschlossen) bezeichnet den Limes der reellen Funktion $f:D\rightarrow \R$ für den Grenzübergang von $x$ gegen eine Stelle $x_{0}$, wobei $x_{0}$ nicht umbedingt in der Definitionsmenge von $f$ enthalten sein muss.
+	Das Symbol $\lim\limits_{x \rightarrow x_{0}}f(x)$ mit $x_{0} \in \overline{\R}$ ($\pm \infty$ eingeschlossen) bezeichnet den Limes der reellen Funktion $f:D\rightarrow \R$ für den Grenzübergang von $x$ gegen eine Stelle $x_{0}$, wobei $x_{0}$ nicht unbedingt in der Definitionsmenge von $f$ enthalten sein muss.
 
 	Eine Zahl $g \in \overline{\R}$ ist der Grenzwert einer Funktion $f:D\rightarrow \R$ für $x\rightarrow x_{0}$, falls für jede Folge $(a_{n})_{n\in \N}$ mit Folgegliedern aus $D$ und Grenzwert $x_{0}$ die Folge $(f(a_{n}))_{n\in \N}$ den Grenzwert $g$ hat.
 	$$\lim\limits_{x \rightarrow x_{0}}f(x) = g \quad \Leftrightarrow \quad \forall (a_{n})_{n\in \N} \text{ mit } \lim\limits_{n \rightarrow \infty}a_{n}=x_{0} : \lim\limits_{n \rightarrow \infty}f(a_{n})=g$$
@@ -247,7 +247,7 @@ Eine Asymptote ist eine Gerade oder Kurve, die sich dem Graphen einer Funktion i
 		\item \textbf{Waagerechte Asymptote:}
 		
 		Konvergiert $f$ für $x\rightarrow \infty$ gegen eine reelle Zahl $g\in \R$, das heißt $\lim\limits_{x \rightarrow \infty }{f(x)}=g$, dann ist die Gerade $y=g$ die \textbf{waagerechte} Asymptote von $f$. Das Gleiche gilt für $\lim\limits_{x \rightarrow -\infty}$.\\
-		Bei gebrochenrationalen Funktionen ist dies der Fall, wenn der Zählergrad kleiner (dann ist $g=0$) oder gleich dem Nennergrad $m$ ist.
+		Bei gebrochen rationalen Funktionen ist dies der Fall, wenn der Zählergrad kleiner (dann ist $g=0$) oder gleich dem Nennergrad $m$ ist.
 
 		\item \textbf{Schräge Asymptote:}
 		
